syntax = "proto3";

package auth;

option go_package = "github.com/madevara24/go-grpc-boilerplate/proto/auth";

service AuthHandler {
    rpc Login(LoginRequest) returns (TokenResponse);
    rpc Refresh(RefreshRequest) returns (TokenResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message RefreshRequest{
    string refresh_token = 1;
}

message TokenResponse {
    string access_token = 1;
    string refresh_token = 2;
    int64 expires_in = 3;
    string token_type = 4;
}